Fixed spacing at bottom of preview on mobile

--- a/sass/base-styles/_base.scss
+++ b/sass/base-styles/_base.scss
@@ -5,7 +5,8 @@ html {
 }
 
 body {
-    margin: 0 auto 2.0rem;
+    margin: 0 auto;
+    padding-bottom: 2.0rem;
     width:  100%;
 }
 
